<resources>
    <string name="app_name">DramaTime</string>
    <string name="web_client_id" translatable="false">858141055830-9f8lhir12sqi6uf5l8qepjflj236ldo9.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1451335392425640</string>
    <string name="facebook_client_token" translatable="false">3fe7a7f707d39c403ef5bc6815d9885a</string>
    <string name="common_video_error_not_support">该视频不适合在此设备上播放</string>
    <string name="common_video_error_unknown">无法播放此视频</string>
    <string name="common_video_error_supplement">错误类型：%d，错误代码：%d</string>
    <string name="common_web_ssl_error_title">当前网站安全证书已过期或不可信\n是否继续浏览</string>
    <string name="common_web_ssl_error_allow">继续浏览</string>
    <string name="common_web_ssl_error_reject">返回上一页</string>
    <string name="common_web_location_permission_title">当前网站需要获取您的地理位置</string>
    <string name="common_web_location_permission_allow">授予</string>
    <string name="common_web_location_permission_reject">拒绝</string>
    <string name="common_web_call_phone_title">当前号码 %s</string>
    <string name="common_web_call_phone_allow">拨打</string>
    <string name="common_web_call_phone_reject">取消</string>
    <string name="select_min_hint">至少要选择 %d 项</string>
    <string name="select_max_hint">最多只能选择 %d 项</string>
    <string name="image_select_title">图片选择</string>
    <string name="image_select_all">所有图片</string>
    <string name="image_select_total">共 %d 张</string>
    <string name="image_select_max_hint">本次最多只能选择 %d 张图片</string>
    <string name="image_select_error">无法选中，该图片已经被删除</string>
    <string name="image_crop_error_not_support">裁剪失败，当前手机不支持裁剪图片</string>
    <string name="video_select_title">视频选择</string>
    <string name="video_select_all">所有视频</string>
    <string name="video_select_total">共 %d 个</string>
    <string name="video_select_max_hint">本次最多只能选择 %d 个视频</string>
    <string name="video_select_error">无法选中，该视频已经被删除</string>
    <string name="camera_launch_fail">无法启动相机</string>
    <string name="camera_image_error">目标地址错误</string>
    <string name="http_unknown_error">Request error, unknown error</string>
    <string name="http_token_error">Login failed, please log in again</string>
    <string name="http_data_explain_error">Data parsing exception, please wait</string>
    <string name="http_server_out_time">Server request timeout, please try again later</string>
    <string name="http_network_error">Request failed, please check network settings</string>
    <string name="http_response_error">The server response is abnormal. Please try again later</string>
    <string name="http_server_error">The server connection is abnormal. Please try again later</string>
    <string name="http_request_cancel">The request was interrupted, please try again</string>
    <string name="http_response_null_body">Server data returned abnormal, please try again later</string>
    <string name="http_response_md5_error">Download failed, file md5 verification failed</string>
    <string name="http_repeat_submit">Repeat submit is not allowed, please try again later</string>
    <string name="common_loading">Loading&#8230;</string>
    <string name="common_unknown_error">UnknownError</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_crash_hint">The application encountered a minor accident and is currently being restarted</string>
    <string name="common_network_error">The current network is unavailable, please check the network settings</string>
    <string name="common_step_next">Next step</string>
    <string name="common_step_complete">Complete</string>
    <string name="common_step_commit">Submit</string>
    <string name="common_permission_alert">Authorization reminder</string>
    <string name="common_permission_fail_1">Authorization failed, please grant permissions correctly</string>
    <string name="common_permission_fail_2">Failed to obtain permissions, please grant permissions manually</string>
    <string name="common_permission_fail_3">Failed to obtain permissions, please grant manually%s</string>
    <string name="common_permission_fail_4">No backend location permission has been granted. Please select "Always allow"</string>
    <string name="common_permission_goto">Go to Authorization</string>
    <string name="common_permission_calendar">Calendar permissions</string>
    <string name="common_permission_camera">Camera permissions</string>
    <string name="common_permission_contacts">Address book permissions</string>
    <string name="common_permission_location">Location permissions</string>
    <string name="common_permission_location_background">Background positioning permissions</string>
    <string name="common_permission_microphone">Microphone permissions</string>
    <string name="common_permission_phone">Telephone permissions</string>
    <string name="common_permission_call_log">Call log permissions</string>
    <string name="common_permission_sensors">Body sensor permissions</string>
    <string name="common_permission_activity_recognition">Fitness Exercise Permissions</string>
    <string name="common_permission_sms">SMS permissions</string>
    <string name="common_permission_storage">Storage permissions</string>
    <string name="common_permission_install">Install application permissions</string>
    <string name="common_permission_notification">Notification Bar Permissions</string>
    <string name="common_permission_window">Suspended window permissions</string>
    <string name="common_permission_setting">System Setting Permissions</string>
    <string name="common_network_hint">There is currently no network connection, please check your network settings</string>
    <string name="common_no_more_data">There\'s no more data left</string>
    <string name="status_layout_no_data">Empty and empty</string>
    <string name="status_layout_error_request">Request error, please try again</string>
    <string name="status_layout_error_network">Network error, please try again</string>
    <string name="status_layout_retry">Retry</string>
    <string name="update_status_start">Downloading</string>
    <string name="update_status_running">Downloading %d%%</string>
    <string name="update_status_successful">Download completed, click on install</string>
    <string name="update_status_failed">Download failed, click retry</string>
    <string name="update_notification_channel_id">update</string>
    <string name="update_notification_channel_name">Upgrade Notification</string>
    <string name="web_title">Web page loading&#8230;</string>
    <string name="text_empty_network_error">Connection error.\nPlease check your connection and try again.</string>
    <string name="text_empty_no_data">There is currently no data available</string>
    <string name="load_failed">Loading failed, click retry</string>
    <string name="load_end">You have Scrolled to the bottom</string>
    <string name="load_complete">Click to load more</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="home_nav_index">Home</string>
    <string name="home_nav_index_top">BackTop</string>
    <string name="home_nav_mylist">My List</string>
    <string name="home_nav_bonus">Bonus</string>
    <string name="home_nav_me">Me</string>
    <string name="coming_in">Coming in:</string>
    <string name="play">Play</string>
    <string name="retry">Retry</string>
    <string name="more">More</string>
    <string name="reserved">Reserved</string>
    <string name="remind_me">Remind Me</string>
    <string name="reservation_successful">Reservation successful</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="scrolled_bottom_hint">More dramas will be updated, stay tuned for surprises!</string>
    <string name="ep_current">EP.%d</string>
    <string name="ep_total">/EP.%d</string>
    <string name="no_viewing_hint">There are currently no viewing records available</string>
    <string name="watch_more">Watch More</string>
    <string name="sign_in">Sign in</string>
    <string name="visitor">Visitor</string>
    <string name="user_id">User ID :%s</string>
    <string name="wallet">Wallet</string>
    <string name="coins">Coins</string>
    <string name="top_up">Top Up</string>
    <string name="contact_us">Contact Us</string>
    <string name="version">Version %s</string>
    <string name="unlock_all">Unlock All</string>
    <string name="no_ads">No Ads</string>
    <string name="vip_frame">VIP Frame</string>
    <string name="weekly_vip">Weekly VIP</string>
    <string name="monthly_vip">Monthly VIP</string>
    <string name="annual_vip">Annual VIP</string>
    <string name="expire_on">Expire on %s</string>
    <string name="expired">Expired</string>
    <string name="first_login">Get %d bonus for first login</string>
    <string name="welcome_to">Welcome to</string>
    <string name="login_google">Sign in with Google</string>
    <string name="login_facebook">Sign in with Facebook</string>
    <string name="agree_privacy_policy">By continuing  you agree to the\n</string>
    <string name="and">and</string>
    <string name="terms_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="renewal_agreement">Renewal Agreement</string>
    <string name="last_login">Last login</string>
    <string name="recharge">Recharge</string>
    <string name="unlock_history">Unlock History</string>
    <string name="transaction_history">Transaction History</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="auto_unlock_next">Auto Unlock next video</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_all_cache">Clear all cache?</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_clear">Clear</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_hint">Are you sure you want to delete your account? This will permanently erase your account. And you can\'t undo this action.</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_hint">When you sign out,your watch history will not be synced to your account.</string>
    <string name="language">Language</string>
    <string name="language_title">Language</string>
    <string name="current_language">English</string>
    <string name="language_english">English</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_japanese">Japanese</string>
    <string name="language_spain">Spain</string>
    <string name="language_english_key">English</string>
    <string name="language_arabic_key">عربي</string>
    <string name="language_japanese_key">日本語</string>
    <string name="language_spain_key">Español</string>
    <string name="report">Report</string>
    <string name="submit">Submit</string>
    <string name="please_select_reason">Please select a reason for reporting (required)</string>
    <string name="report_hint">Please explain your reason here,and we\'ll handle it as soon as possible</string>
    <string name="email_address">Email address (required)</string>
    <string name="email_address_hint">Please enter your e-mail address,and we\'ll contact you soon</string>
    <string name="share">Share</string>
    <string name="auto_unlock">Auto Unlock</string>
    <string name="customer_service">Customer Service</string>
    <string name="renew">Renew</string>
    <string name="renew_privileges">Renew to Enjoy Privileges</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="receive_timely">Receive timely\u0020</string>
    <string name="allow">Allow</string>
    <string name="not_now">Not now</string>
</resources>